fix: add missing space between total and currency unit

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -249,7 +249,7 @@ input {
 }
 
 .summary-total-cost {
-  flex-basis: 100%;
+  flex-basis: 2;
   text-transform: uppercase;
 }
 
